@@ -5,6 +5,13 @@
   base64 data is always a multiple of 8-bit bytes. This might explain why
   no harm caused by this error has been found for years. (Bug reported by
   Lukasz Iwaszkiewicz).
+* When a completely cached IMAP message was copied on a server supporting
+  the UIDPLUS IMAP extension and the message had not been printed during
+  the current session yet, the cached entry for the target message contained
+  the message body twice. This bug has been fixed, but cached messages
+  written by previous nail versions may still suffer from this error. To get
+  rid of them, delete them from the IMAP cache directory. The file README in
+  that directory explains its structure.
 * Wildcard host names in certificates according to RFC 2595 are now accepted
   (Bug reported by Svend Sorensen).
 * Since RFC 2595 allows wildcards at other places than RFC 2818 which is
